--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-.header-background{
+.column img{
     width: 556.01px;
 height: 438px;
 margin-left:120px;
 transition: width;
 }
 
-.header-background:hover{
+.column img:hover{
     width:600px;
     height: 500px ;
 }
 header{
     background-color: #2D25A0;
 padding: 20px;
-padding-left:156px ;
+/* padding-left:156px ; */
 width: 100%;
 }
 /* NAV SECTION.....HERE */
@@ -40,7 +40,7 @@ nav{
         
     }
     
-    /*  */
+    /* top right section here.............. */
  
     .column h1{
         color: white;
@@ -70,7 +70,6 @@ justify-content: center;
 align-items: center;
 
     }
-
     .top-section{
         display: flex;
         margin-top: 100px;
@@ -115,7 +114,6 @@ align-items: center;
     .player-detail h2{
         font-size: 28px;
     }
-    
 /* about kick section starts  here */
 .about-kick{
     background-color: gray;
@@ -124,7 +122,6 @@ align-items: center;
     padding-top: 100px;
 padding-left:150px ;
 }
-
 .about-kick h1{
     font-size: 2rem;
     margin-bottom: 10px;
@@ -132,8 +129,6 @@ padding-left:150px ;
 .about-kick p{
 color: lightgray;
 }
-
-
 .row1{
     display: grid;
     grid-template-columns: 250px 250px;
@@ -143,6 +138,7 @@ color: lightgray;
 .col1{
     margin-bottom: 50px;
 }
+
 /* match galary start here */
 .galary-title{
    display: flex;
@@ -186,57 +182,13 @@ justify-content: center;
 }
 
 
-
-/* for responsivr.............. */
-
-@media only screen and (max-width: 600px) {
-.menu{
-    flex-direction: column;
-}
-.menu a{
-    background-color: rosybrown;
-    color: black;
-    margin: 10px 0; 
-    text-align: center;
-}
-.column h1{
-    color: white;
-    font-size: 50px;
-}
-.column a{
-  
-    text-decoration: none;
-    color: white;    
-}
-.anchor{
-    background-color: #c5135a;
-    padding: 10px 24px;
-width: 168px;
-height: 44px;
-display: flex;
-margin-right: 0;
-color:white;
-font-size: 16px;
-margin-top: 50px;
-
-}
-.right-arrow{
-    margin-left: 8px;
-display: flex;
-justify-content: center;
-align-items: center;
-
-}
-
-/* .top-section{
-    display: flex;
-    margin-top: 100px;
-}
-     */
-} 
 /*  responsive... for small devices........... */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 688px) {
+   main{
+       margin: 0;
+       padding: 0;
+   }
     .menu{
         flex-direction: column;
     }
@@ -252,13 +204,13 @@ align-items: center;
  display: block;
  width: 100%;
    }
+  
    .column img{
        width: 100%;
        margin: 0;
        padding: 0; 
    }
-
-    /* for card design ............. */
+    /*card design  responsive............. */
     .player-part{
         width: 100%;
     }
@@ -270,15 +222,18 @@ align-items: center;
      }
     /* about kick section responsive...... */
    .about-kick{
-       flex-direction: column;
-       padding-left: 10px;
+    flex-direction: column;
+    margin-left: -50px;
+    display: block;
+    width: 100%;
+    background-color: darkgray;
    }
-   .about-kick-rightside{
-       display: grid;
-       grid-template-columns: 100%;
-     
-       width: 330px;
-        height: 474px;  
+   .about-kick-image{
+    width: 50%;
+    height: 40%;
+    margin-left: -200px;
+    padding: 0; 
+
    }
 
 
@@ -299,73 +254,66 @@ align-items: center;
 
 /* for tablet design */
 
-@media only screen and (min-width: 600px) and (max-width: 904px) {
-    .menu{
-        flex-direction: column;
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    
+    main{
+        margin: 0;
+        padding: 0;
     }
-    .menu a{
-        background-color: rosybrown;
-        color: black;
-        margin: 10px 0; 
-        text-align: center;
+
+
+   /* .column img{
+    width: 100%;
+    margin: 0;
+    padding: 0; 
+} */
+ /*card design  responsive............. */
+ .player-part{
+    width: 100%;
+  
+}
+ .players{
+     grid-template-columns: repeat(2, 1fr);
+     margin: 0;
+     padding: 0;
+     align-items: center;
+     
     }
-   .top-section{
+    .player-frame{
+        margin: 0;
+    }
+ /* about kick section responsive...... */
+/* .about-kick
+{
  flex-direction: column;
- 
+ margin-left: -50px;
  display: block;
  width: 100%;
-   }
-   .column img{
-       width: 100%;
-       margin: 0;
-       padding: 0;
-    
-       
-   }
-    
-    /* for card design ............. */
-    .card-container{
-       display: grid;
-       grid-template-columns: repeat(2,1fr);
-    }
-    /* about kick section responsive...... */
-   .about-kick{
-       flex-direction: column;
-       padding-left: 0;
-       padding-right: 10px;
-   }
-   .about-kick-rightside{
-       display: grid;
-       grid-template-columns: 100px;
-     
-       width: 330px;
-        height: 474px;
-       
-       
-   }
-.row1>.col1{
-    flex-direction: column;
-    display: flex;
-}
+ background-color: darkgray;
+} */
+/* .about-kick-image{
+ width: 50%;
+ height: 40%;
+ margin-left: -200px;
+ padding: 0; 
 
-
+} */
 
 
 
 /* match galary responsiveness. */
-     .match-galary{
-         flex-direction: column;
-        grid-template-columns: repeat(1,1fr);
-        margin-bottom: 15px;
-        width: 300px ;
-     }
-    
-    footer img{
-        width: 383.87px;
-    height: 110px;
-    
-    }
-
+  /* .match-galary{
+      flex-direction: column;
+     grid-template-columns: repeat(1,1fr);
+     margin-bottom: 15px;
+     width: 300px ;
+  }
+ 
+ footer img{
+     width: 383.87px;
+ height: 110px;
+ 
+ } */
 
 }
 /*  <section class="card-container">
