--- a/style.css
+++ b/style.css
@@ -138,7 +138,6 @@ color: lightgray;
 .col1{
     margin-bottom: 50px;
 }
-
 /* match galary start here */
 .galary-title{
    display: flex;
@@ -174,21 +173,13 @@ justify-content: center;
 .social-menu ul li {
     margin: 10px;
     list-style: none;
-   
 }
 .fab{
     font-size: 20px;
     color: #969BAB;
 }
-
-
 /*  responsive... for small devices........... */
-
 @media only screen and (max-width: 688px) {
-   main{
-       margin: 0;
-       padding: 0;
-   }
     .menu{
         flex-direction: column;
     }
@@ -204,7 +195,6 @@ justify-content: center;
  display: block;
  width: 100%;
    }
-  
    .column img{
        width: 100%;
        margin: 0;
@@ -235,9 +225,6 @@ justify-content: center;
     padding: 0; 
 
    }
-
-
-
 /* match galary responsiveness. */
      .match-galary{
          flex-direction: column;
@@ -245,76 +232,73 @@ justify-content: center;
         margin-bottom: 15px;
         width: 300px ;
      }
+    footer img{
+        width: 383.87px;
+    height: 110px;
+    }
+}
+/* for tablet design */
+
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+    .menu{
+        flex-direction: column;
+    }
+    .menu a{
+        background-color: rosybrown;
+        color: black;
+        margin: 10px 0; 
+        text-align: center;
+    }
+   .top-section{
+ flex-direction: column;
+
+ display: block;
+ width: 100%;
+   }
+  
+   .column img{
+       width: 100%;
+       margin: 0;
+       padding: 0; 
+   }
+    /*card design  responsive............. */
+    .player-part{
+        width: 100%;
+    }
+     .players{
+         grid-template-columns: repeat(2, 1fr);
+         margin: 0;
+         padding: 0;
+         align-items: center;
+     }
+    /* about kick section responsive...... */
+   .about-kick{
+    flex-direction: column;
+    margin-left: -50px;
+    display: block;
+    width: 100%;
+    background-color: darkgray;
+   }
+   .about-kick-image{
+    width: 50%;
+    height: 40%;
+    margin-left: -200px;
+    padding: 0; 
+   }
+/* match galary responsiveness. */
+     .match-galary{
+         flex-direction: column;
+        grid-template-columns: repeat(2,1fr);
+        margin-bottom: 15px;
+        width: 300px ;
+        align-items: center;
+     }
     
     footer img{
         width: 383.87px;
     height: 110px;
     
     }
-
-/* for tablet design */
-
-@media only screen and (min-width: 688px) and (max-width: 992px) {
-    
-    main{
-        margin: 0;
-        padding: 0;
-    }
-
-
-   /* .column img{
-    width: 100%;
-    margin: 0;
-    padding: 0; 
-} */
- /*card design  responsive............. */
- .player-part{
-    width: 100%;
-  
-}
- .players{
-     grid-template-columns: repeat(2, 1fr);
-     margin: 0;
-     padding: 0;
-     align-items: center;
-     
-    }
-    .player-frame{
-        margin: 0;
-    }
- /* about kick section responsive...... */
-/* .about-kick
-{
- flex-direction: column;
- margin-left: -50px;
- display: block;
- width: 100%;
- background-color: darkgray;
-} */
-/* .about-kick-image{
- width: 50%;
- height: 40%;
- margin-left: -200px;
- padding: 0; 
-
-} */
-
-
-
-/* match galary responsiveness. */
-  /* .match-galary{
-      flex-direction: column;
-     grid-template-columns: repeat(1,1fr);
-     margin-bottom: 15px;
-     width: 300px ;
-  }
- 
- footer img{
-     width: 383.87px;
- height: 110px;
- 
- } */
-
 }
 /*  <section class="card-container">
             <!-- first card design.. -->
