--- a/style.css
+++ b/style.css
@@ -6,26 +6,14 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
-.column img{
-    width: 556.01px;
-height: 438px;
-margin-left:120px;
-transition: width;
-}
 
-.column img:hover{
-    width:600px;
-    height: 500px ;
-}
 header{
     background-color: #2D25A0;
 padding: 20px;
-/* padding-left:156px ; */
 width: 100%;
 }
 /* NAV SECTION.....HERE */
 nav{
-   
     display: flex;
     justify-content: flex-end;
     }
@@ -36,18 +24,21 @@ nav{
         text-decoration: none;
         color: white;
         font-size: 16px;
-        padding: 10px 20px ;
-        
+        padding: 10px 20px ; 
     }
     
     /* top right section here.............. */
- 
+    .top-section{
+        display: flex;
+        margin-top: 100px;
+        margin-left: 100px;
+    }
+  
     .column h1{
         color: white;
         font-size: 50px;
     }
     .column a{
-      
         text-decoration: none;
         color: white;    
     }
@@ -61,18 +52,29 @@ nav{
     color:white;
     font-size: 16px;
     margin-top: 50px;
-  
+    border-radius: 5px;
     }
+    .anchor:hover{
+background-color: black;
+color: black;
+    }
+
+
     .right-arrow{
         margin-left: 8px;
 display: flex;
 justify-content: center;
 align-items: center;
-
     }
-    .top-section{
-        display: flex;
-        margin-top: 100px;
+    .column img{
+        width: 556.01px;
+    height: 438px;
+    margin-left:120px;
+    transition: width;
+    }
+    .column img:hover{
+        width:600px;
+        height: 500px ;
     }
     /* second section starts here.......... */
     .player-part{
@@ -81,12 +83,12 @@ align-items: center;
         margin-right: 210px;
     }
     .player-frame{
-        border: 2px solid white;
+        border: 1px solid grey;
         background-color: white;
         padding: 16px;
+      
         border-radius: 16px;
-        box-shadow: 1px 1px 40px white;
-    
+        box-shadow: 2px 2px 40px gray;    
     }
     .players{
         display: grid;
@@ -103,7 +105,7 @@ align-items: center;
     }
     .player img:hover{
         transform: scale(1.1);
-        transition: transform 2s ease ;
+        transition: transform 1s ease ;
     }
     .player-details{
         border-radius: 10px;
@@ -115,19 +117,21 @@ align-items: center;
         font-size: 28px;
     }
 /* about kick section starts  here */
-.about-kick{
+.about-section{
     background-color: gray;
     display: grid;
     grid-template-columns: 600px 400px;
     padding-top: 100px;
 padding-left:150px ;
+margin-top: 15px;
 }
-.about-kick h1{
+.about-section h1{
     font-size: 2rem;
     margin-bottom: 10px;
+   
 }
-.about-kick p{
-color: lightgray;
+.about-section p{
+color: rgb(153, 72, 72);
 }
 .row1{
     display: grid;
@@ -164,7 +168,6 @@ footer{
 footer img{
     width: 483.87px;
 height: 110px;
-
 }
 .social-menu ul{
     display: flex;
@@ -191,7 +194,6 @@ justify-content: center;
     }
    .top-section{
  flex-direction: column;
-
  display: block;
  width: 100%;
    }
@@ -200,7 +202,7 @@ justify-content: center;
        margin: 0;
        padding: 0; 
    }
-    /*card design  responsive............. */
+    /*players section responsive............. */
     .player-part{
         width: 100%;
     }
@@ -210,20 +212,19 @@ justify-content: center;
          padding: 0;
          align-items: center;
      }
-    /* about kick section responsive...... */
-   .about-kick{
+    /* about  section responsive...... */
+   .about-section{
     flex-direction: column;
     margin-left: -50px;
     display: block;
     width: 100%;
     background-color: darkgray;
    }
-   .about-kick-image{
+   .about-section-image{
     width: 50%;
     height: 40%;
     margin-left: -200px;
     padding: 0; 
-
    }
 /* match galary responsiveness. */
      .match-galary{
@@ -255,7 +256,6 @@ justify-content: center;
  display: block;
  width: 100%;
    }
-  
    .column img{
        width: 100%;
        margin: 0;
@@ -272,14 +272,14 @@ justify-content: center;
          align-items: center;
      }
     /* about kick section responsive...... */
-   .about-kick{
+   .about-section{
     flex-direction: column;
     margin-left: -50px;
     display: block;
     width: 100%;
     background-color: darkgray;
    }
-   .about-kick-image{
+   .about-section-image{
     width: 50%;
     height: 40%;
     margin-left: -200px;
@@ -293,49 +293,8 @@ justify-content: center;
         width: 300px ;
         align-items: center;
      }
-    
     footer img{
         width: 383.87px;
     height: 110px;
-    
     }
 }
-/*  <section class="card-container">
-            <!-- first card design.. -->
-            <div class="card">
-                <img src="images/players/player-2.png" alt="Avatar" style="width:100%">
-                <div class="card-body">
-                    <div class="card-title">
-                        <h1>Lionel Messi</h1>
-                    </div>
-                    <div class="card-desc">
-                        <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
-                    </div>
-                </div>
-            </div>
-            <!-- 2nd  card design -->
-            <div class="card">
-                <img src="images/players/player-3.png" alt="Avatar" style="width:100%">
-                <div class="card-body">
-                    <div class="card-title">
-                        <h3>Cristiano Ronaldo</h3>
-                    </div>
-                    <div class="card-desc">
-                        <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captain team</p>
-                    </div>
-                </div>
-            </div>
-            <!-- 3rd card  design-->
-            <div class="card">
-                <img src="images/players/player-1.png" alt="Avatar" style="width:100%">
-                <div class="card-body">
-                    <div class="card-title">
-                        <h3>Neymar Jr</h3>
-                    </div>
-                    <div class="card-desc">
-                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section> */
